Fix display on mobile

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -45,8 +45,8 @@ p {
   top: 50%;
   left: 50%; */
   /* transform: translate(-50%, -50%); */
-  width: 480px;
-  height: 480px;
+  width: 350px;
+  height: 350px;
   border: 5px solid #ffffff;
   box-shadow: 0 0 0 5px #4973ff;
   border-radius: 50%;
